--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
-My GitHub Page
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <style media="screen" type="text/css">/*<![CDATA[*/@import 'stylesheet.css';/*]]>*/</style>
+    <style type="text/css" media="screen">
+      body {
+        padding: 0;
+        margin: 0;
+      }
+      #container {
+        padding: 30px;
+        background-color: #decbad;
+        -moz-box-shadow: inset 0 0 15px 15px #c8ae8d;
+        -webkit-box-shadow: inset 0 0 15px 15px #c8ae8d;
+        box-shadow: inset 0 0 15px 15px #c8ae8d;
+      }
+      #background {
+        width: 1224px;
+        border: 1px solid;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+      }
+      header {
+        text-align: center;
+        font-family:"LatinCondensed-SemiBold"
+      }
+      h2 {
+        font-family:"LatinCondensed-SemiBold" !important
+      }
+      footer {
+        padding-top: 10px;
+        text-align: center;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="container">
+      <header>
+        <h1>Bubna / Bubny / Holešovice-Bubny / Praha VII. / Praha 7 - Holešovice</h1>
+      </header>
+<iframe src='http://embed.verite.co/timeline/?source=0AuLlKoYs_dmNdGR2SGh3VVRnSVE3eVhVak1peXpOcHc&font=Bevan-PotanoSans&maptype=toner&lang=cz&height=650' width='100%' height='650' frameborder='0'></iframe>
+      <footer>
+        Ing. Jiří Kubíček<br/>Strana svobodných občanů a  Lepší Praha 7 o.s.
+      </footer>
+    </div>
+  </body>
+</html>
