--- a/index.html
+++ b/index.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="cz">
   <head>
+    <title>Bubna - časová osa vývoje</title>
     <meta charset="utf-8">
-    <title></title>
-    <style media="screen" type="text/css">/*<![CDATA[*/@import 'stylesheet.css';/*]]>*/</style>
+    <meta name="description" content="TimelineJS example">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-touch-fullscreen" content="yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <!-- Style-->
+    <style media="screen" type="text/css">/*<![CDATA[*/@import 'css/stylesheet.css';/*]]>*/</style>
     <style type="text/css" media="screen">
-      body {
-        padding: 0;
-        margin: 0;
+      html, body {
+       height:100%;
+       padding: 0px;
+       margin: 0px;
       }
       #container {
-        padding: 30px;
+        padding: 60px;
         background-color: #decbad;
-        -moz-box-shadow: inset 0 0 15px 15px #c8ae8d;
-        -webkit-box-shadow: inset 0 0 15px 15px #c8ae8d;
-        box-shadow: inset 0 0 15px 15px #c8ae8d;
+        -moz-box-shadow: inset 0 0 25px 25px #c8ae8d;
+        -webkit-box-shadow: inset 0 0 25px 25px #c8ae8d;
+        box-shadow: inset 0 0 25px 25px #c8ae8d;
+      }
+      .timeline-embed {
+        margin-left: auto;
+        margin-right: auto;
       }
       #background {
         width: 1224px;
@@ -27,23 +37,51 @@
         text-align: center;
         font-family:"LatinCondensed-SemiBold"
       }
-      h2 {
-        font-family:"LatinCondensed-SemiBold" !important
+      h1 {
+        margin-top: 0px;
+        font-size: 350%;
       }
       footer {
         padding-top: 10px;
         text-align: center;
       }
+      footer a:link, a:visited, a:active {text-decoration: none; color: black}
+      footer a:hover {text-decoration: underline; color: black;}
+      </style>
     </style>
+    <!-- HTML5 shim, for IE6-8 support of HTML elements--><!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   </head>
+
   <body>
     <div id="container">
       <header>
         <h1>Bubna / Bubny / Holešovice-Bubny / Praha VII. / Praha 7 - Holešovice</h1>
       </header>
-<iframe src='http://embed.verite.co/timeline/?source=0AuLlKoYs_dmNdGR2SGh3VVRnSVE3eVhVak1peXpOcHc&font=Bevan-PotanoSans&maptype=toner&lang=cz&height=650' width='100%' height='650' frameborder='0'></iframe>
+      <!-- BEGIN Timeline Embed -->
+      <div id="timeline-embed"></div>
+      <script type="text/javascript">
+        var timeline_config = {
+         width:              '100%',
+         height:             '650',
+         source:             'https://docs.google.com/spreadsheet/pub?key=0AuLlKoYs_dmNdGR2SGh3VVRnSVE3eVhVak1peXpOcHc&single=true&gid=0&output=html',
+         // embed_id:           'timeline-embed',               //OPTIONAL USE A DIFFERENT DIV ID FOR EMBED
+         // start_at_end:       false,                          //OPTIONAL START AT LATEST DATE
+         // start_at_slide:     '4',                            //OPTIONAL START AT SPECIFIC SLIDE
+         // start_zoom_adjust:  '3',                            //OPTIONAL TWEAK THE DEFAULT ZOOM LEVEL
+         hash_bookmark:      true,                           //OPTIONAL LOCATION BAR HASHES
+         font:               'LatinCondensed-SemiBold',             //OPTIONAL FONT
+         // debug:              true,                           //OPTIONAL DEBUG TO CONSOLE
+         lang:               'cz',                           //OPTIONAL LANGUAGE
+         maptype:            'watercolor',                   //OPTIONAL MAP STYLE
+         // css:                'path_to_css/timeline.css',     //OPTIONAL PATH TO CSS
+         // js:                 'path_to_js/timeline-min.js'    //OPTIONAL PATH TO JS
+        }
+      </script>
+      <script type="text/javascript" src="js/storyjs-embed.js"></script>
+      <!-- END Timeline Embed-->
       <footer>
-        Ing. Jiří Kubíček<br/>Strana svobodných občanů a  Lepší Praha 7 o.s.
+        <a href="http://www.kubicek.cz">Ing. Jiří Kubíček</a><br/><a href="http://www.svobodni.cz">Strana svobodných občanů</a> a <a href="http://www.lepsipraha7.cz">Lepší Praha 7 o.s.</a>
       </footer>
     </div>
   </body>
