--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
          // start_at_slide:     '4',                            //OPTIONAL START AT SPECIFIC SLIDE
          // start_zoom_adjust:  '3',                            //OPTIONAL TWEAK THE DEFAULT ZOOM LEVEL
          hash_bookmark:      true,                           //OPTIONAL LOCATION BAR HASHES
-         font:               'LatinCondensed-SemiBold',             //OPTIONAL FONT
+         font:               'BreeSerif-OpenSans',             //OPTIONAL FONT
          // debug:              true,                           //OPTIONAL DEBUG TO CONSOLE
          lang:               'cz',                           //OPTIONAL LANGUAGE
          maptype:            'watercolor',                   //OPTIONAL MAP STYLE
