Switching to latest TimelineJS hosted on CDN

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
          // js:                 'path_to_js/timeline-min.js'    //OPTIONAL PATH TO JS
         }
       </script>
-      <script type="text/javascript" src="js/storyjs-embed.js"></script>
+      <script type="text/javascript" src="http://cdn.knightlab.com/libs/timeline/latest/js/storyjs-embed.js"></script>
       <!-- END Timeline Embed-->
       <footer>
         <a href="http://www.kubicek.cz">Ing. Jiří Kubíček</a><br/><a href="http://www.svobodni.cz">Strana svobodných občanů</a> a <a href="http://www.lepsipraha7.cz">Lepší Praha 7 o.s.</a>
